improve auth
